Add (deep) copy method to RecordTemplate rb=137977